--- a/index.html
+++ b/index.html
@@ -1,32 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dev Renata</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
-    <div>
-        <!-- lista não ordenada que será nosso menu-->
-        <ul>
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="contato.html">Fale Conosco</a> </li>
-        </ul>
-    </div>
-    <div>
-        <h1>Renata Pereira</h1>
-        <h2>Sobre mim</h2>
-        <p>
+    <ul class="menu">
+        <li>
+            <a href="index.html">Home</a>
+        </li>
+        <li>
+            <a href="contato.html">Contato</a> 
+        </li>
+    </ul>    
+    <div >
+        <h1 class= center>Sobre Renata Pereira</h1>
+        <div class=" container">    
+        <p class="p-20">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
             <br />
             Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </p>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Aliquam faucibus purus in massa. Integer quis auctor elit sed vulputate mi sit amet. Quis imperdiet massa tincidunt nunc pulvinar sapien et ligula ullamcorper. Tortor at auctor urna nunc id cursus. Ut diam quam nulla porttitor massa id neque aliquam vestibulum. Adipiscing at in tellus integer feugiat scelerisque varius. Enim eu turpis egestas pretium aenean pharetra magna. Lacus luctus accumsan tortor posuere ac. Egestas pretium aenean pharetra magna. Id nibh tortor id aliquet lectus. Massa vitae tortor condimentum lacinia quis vel eros. Mattis ullamcorper velit sed ullamcorper morbi tincidunt ornare massa. Sagittis nisl rhoncus mattis rhoncus urna neque. Dui accumsan sit amet nulla facilisi morbi tempus iaculis. Quam adipiscing vitae proin sagittis nisl.
+        <p class="p-20">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Aliquam faucibus purus in massa. Integer quis auctor elit sed vulputate mi sit amet.
+            <br />
+            Quis imperdiet massa tincidunt nunc pulvinar sapien et ligula ullamcorper. Tortor at auctor urna nunc id cursus. Ut diam quam nulla porttitor massa id neque aliquam vestibulum. Adipiscing at in tellus integer feugiat scelerisque varius. 
+            <br />
+            Enim eu turpis egestas pretium aenean pharetra magna. Lacus luctus accumsan tortor posuere ac. Egestas pretium aenean pharetra magna. Id nibh tortor id aliquet lectus. Massa vitae tortor condimentum lacinia quis vel eros. Mattis ullamcorper velit sed ullamcorper morbi tincidunt ornare massa. Sagittis nisl rhoncus mattis rhoncus urna neque. Dui accumsan sit amet nulla facilisi morbi tempus iaculis. Quam adipiscing vitae proin sagittis nisl.
         </p>
-        <p>
-            Orci nulla pellentesque dignissim enim sit amet venenatis urna cursus. Nunc scelerisque viverra mauris in aliquam sem fringilla ut. Erat nam at lectus urna duis. Augue ut lectus arcu bibendum at. Commodo odio aenean sed adipiscing diam donec adipiscing tristique risus. Sit amet consectetur adipiscing elit. Tortor condimentum lacinia quis vel. Neque aliquam vestibulum morbi blandit. Ornare quam viverra orci sagittis. Facilisis mauris sit amet massa vitae. Facilisi nullam vehicula ipsum a arcu cursus vitae congue.
-        </p>
+        <div>
+            <img class="br-50 wh-500" 
+                src="./assets/img/Renata.jpeg"
+                alt="Foto Renata">
+        </div>
         <hr />
     </div>
     <div>
