--- a/contato.html
+++ b/contato.html
@@ -4,23 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fale conosco</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>   
     <div>
-        <!-- lista não ordenada que será nosso menu-->
-        <ul>
+        <ul class="menu">
             <li><a href="./index.html">Home</a></li>
             <li><a href="contato.html">Fale Conosco</a> </li>
         </ul>
     </div> 
-    <h1>Fale conosco</h1>
+    <h1>Entre em contato</h1>
     
         <form>
-        <label for="fname">Nome:</label><br>
-        <input type="text" id="nome" name="fname" value="John"><br>
-        <label for="lname">Sobrenome:</label><br>
-        <input type="text" id="lname" name="lname" value="Doe">
+        <label for="nome">Nome:</label> <br>
+        <input type="text" id="nome">
+        <br>
+        <br>
+        <label for="email">E-mail:</label><br>
+        <input type="email" id="email">
+        <br>
+        <br>
+        <label for="assunto">Assunto:</label>
+        <textarea id="mensagem" name="mensagem" rows="10" cols="150"></textarea>
         <input type="submit" valeu= "Enviar">
         </form>
+
+    <div> 
+
+         <p>Avenida paulista - consolação - SP</p>
+
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.1973547855564!2d-46.6609789763875!3d-23.561354435690884!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59c8da0aa315%3A0xd59f9431f2c9776a!2sAv.%20Paulista%2C%20S%C3%A3o%20Paulo%20-%20SP!5e0!3m2!1spt-BR!2sbr!4v1668033941695!5m2!1spt-BR!2sbr"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+    <footer>
+        <div>
+           <a href="https://www.linkedin.com/in/silva-renata/"><img src="./assets/img/linkdin.png" alt="Logo do Linkedin" title="Linkedin"></a>
+        </div>
+        <p>Direitos reservados: Renata Pereira &copy;</p>
+    </footer>
 </body>
 </html>
